# linux_music_player

./: CMakeLists.txt  README.md  build.sh  resources.qrc
headers/: MainWindow.hpp  gstreamer_mgr.hpp
src/: MainWindow.cpp  gstreamer_mgr.cpp  main.cpp
